invalid_var_arg_keywords_test/invalid_var_arg_keywords_test_4.src
.IPPcode24
DEFVAR GF@a string@ahoj